--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Ajudamos você a superar situações difíceis ou problemáticas em sua vida. Você precisa de ajuda para enfrentar as dificuldades? Patrícia Martinelli | Psicóloga | Terapeuta Ocupacional | Psicólogo em São Paulo"/>
         <meta name="author" content="Marcos Teruo Ouchi | Gambatê!" />
-        <title>Patrícia Martinelli | Psicóloga | Terapeuta Ocupacional | Psicólogo em São Paulo</title>
+        <title>Festival SIBiSC | Bibliotecas de São Carlos</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -31,7 +31,7 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Você precisa de ajuda para enfrentar as dificuldades?</h1>
+                            <h1 class="display-1 lh-1 mb-3">Festival SIBiSC | Bibliotecas de São Carlos</h1>
                             <p class="lead fw-normal text-muted mb-5">Nós, psicólogos, ajudamos você a superar situações difíceis ou problemáticas em sua vida.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <a  class="btn btn-primary py-3 px-4 mt-2 rounded-pill"  target="_blank" rel="noopener noreferrer" href="https://api.whatsapp.com/send?phone=5511971056730&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es.">
