Alteração no site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Ajudamos você a superar situações difíceis ou problemáticas em sua vida. Você precisa de ajuda para enfrentar as dificuldades? Patrícia Martinelli | Psicóloga | Terapeuta Ocupacional | Psicólogo em São Paulo"/>
+        <meta name="description" content="Economia circular, metaversos, governança, fontes de informação confiável, estudos de usuários, responsabilidade social e, claro, livros e documentos. Temas tão badalados hoje e familiares às Bibliotecas, Arquivos e Museus há décadas. Entre os dias 23 a 28 de maio de 2022 venha redescobrir-se, na cidade da tecnologia e no maior ambiente de inovação privado do país."/>
         <meta name="author" content="Marcos Teruo Ouchi | Gambatê!" />
         <title>Festival SIBiSC | Bibliotecas de São Carlos</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -31,15 +31,15 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Festival SIBiSC | Bibliotecas de São Carlos</h1>
-                            <p class="lead fw-normal text-muted mb-5">Nós, psicólogos, ajudamos você a superar situações difíceis ou problemáticas em sua vida.</p>
+                            <h1 class="display-1 lh-1 mb-3">E o mundo nos redescobre!</h1>
+                            <p class="lead fw-normal text-muted mb-5">Economia circular, metaversos, governança, fontes de informação confiável, estudos de usuários, responsabilidade social e, claro, livros e documentos. Temas tão badalados hoje e familiares às Bibliotecas, Arquivos e Museus há décadas. Entre os dias 23 a 28 de maio de 2022 venha redescobrir-se, na cidade da tecnologia e no maior ambiente de inovação privado do país.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
-                                <a  class="btn btn-primary py-3 px-4 mt-2 rounded-pill"  target="_blank" rel="noopener noreferrer" href="https://api.whatsapp.com/send?phone=5511971056730&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es.">
-                                    <i class="bi-whatsapp"></i> 
-                                    <span>Agende por whatsapp</span>
+                                <a  class="btn btn-primary py-3 px-4 mt-2 rounded-pill"  target="_blank" rel="noopener noreferrer" href=#>
+                                    <i class="bi-calendar-week-fill"></i> 
+                                    <span>Programação</span>
                                 </a>
-                                <a class="btn btn-primary py-3 px-4 ms-2 mt-2 rounded-pill" target="_blank"  rel="noopener noexternal" href="tel:+5511971056730"><i class="bi-phone"></i>
-                                    <span>Ligue para mim</span> 
+                                <a class="btn btn-primary py-3 px-4 ms-2 mt-2 rounded-pill" target="_blank"  rel="noopener noexternal" href="#"><i class="bi-check-circle-fill"></i>
+                                    <span>Inscrição Gratuita</span> 
                                 </a>
                             </div>
                         </div>
@@ -47,7 +47,7 @@
                     <div class="col-lg-6">
                         <!-- Masthead device mockup feature-->
                         <div class="mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle" src="assets/img/patriciamartinelli.webp">
+                            <img class="img-fluid rounded-circle" src="assets/img/festival-sibisc-2022.png">
                         </div>
                     </div>
                 </div>
@@ -109,13 +109,13 @@
             <div class="container px-0">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-5 px-5">
-                        <h2 class="display-4 lh-1 mb-4">Minha trajetória acadêmica e profissional me trouxe até você.</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">Embora suas queixas possam ser parecidas com a de outros ou de outras, para nós, você é único ou única.</p><br />
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">A relação terapêutica (relação entre o terapeuta e seu paciente) é importante para que mudanças efetivas aconteçam na vida do paciente sendo, este, considerado o ativo e responsável pelo sucesso do processo na terapia comportamental.</p><br />
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">Eu sou a <strong>Patrícia Martinelli</strong>, psicóloga, terapeuta comportamental e as intervenções que realizo são baseadas no Behaviorismo Radical e na Análise Experimental do Comportamento.</p>
+                        <h2 class="display-4 lh-1 mb-4">As Bibliotecas, Arquivos e Museus, a informação e os Objetivos de Desenvolvimento Sustentável</h2>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">O acesso à informação foi reconhecido nos Objetivos de Desenvolvimento Sustentável como um alvo para “Promover sociedades pacíficas e inclusivas para o desenvolvimento sustentável, facilitar o acesso à justiça para todos e criar instituições eficazes, responsáveis e inclusivas em todos os níveis.”</p><br />
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">.</p><br />
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">.</p>
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-0 px-sm-0"><img class="img-fluid rounded-3" src="assets/img/career timeline.webp" alt="Trajetória acadêmica e profissional da psicóloga Patrícia Martinelli" /></div>
+                        <div class="px-0 px-sm-0"><img class="img-fluid rounded-3" src="assets/img/objetivos-ods.png" alt="Objetivos de Desenvolvimento Sustentável da ONU" /></div>
                     </div>
                 </div>
             </div>
@@ -321,7 +321,7 @@
         <div data-include="footer"></div>
 
         <!-- Botão do whatsapp -->
-        <a href="https://api.whatsapp.com/send?phone=5511971056730&text=Olá! Gostaria de mais informações. Te encontrei pelo seu site." class="whatsapp_float" target="_blank" rel="noopener noreferrer">
+        <a href="https://api.whatsapp.com/send?phone=5516981909410&text=Olá! Gostaria de mais informações. Te encontrei pelo seu site do Festival SIBiSC 2022." class="whatsapp_float" target="_blank" rel="noopener noreferrer">
             <i class="bi-whatsapp"></i>
         </a>
 
