--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-lg-6">
                         <!-- Masthead device mockup feature-->
                         <div class="mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle" src="assets/img/Festival SIBiSC.gif"> <!--festival-sibisc-2022.png-->
+                            <img class="img-fluid rounded-circle" src="assets/img/Festival SIBiSC.jpg"> <!--festival-sibisc-2022.png-->
                         </div>
                     </div>
                     <div class="col-lg-6">
