alguma mudança que não lembro qual foi

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Redescubra-se!</h1>
                             <p class="lead fw-normal text-muted mb-5">Entre os dias 23 a 28 de maio de 2022 venha redescobrir-se na cidade da tecnologia e no maior ambiente de inovação privado do país.</p>
+                            <p class="lead fw-normal text-muted mb-5">O Festival SIBiSC tem a finalidade de divulgar à sociedade o valor das bibliotecas, arquivos, museus, unidades de informação, pessoas, grupos e demais iniciativas de informação e conhecimento.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <a  class="btn btn-primary py-3 px-4 mt-2 rounded-pill"  target="_self" rel="noopener noreferrer" href=#depoimentos>
                                     <i class="bi-calendar-week-fill"></i> 
@@ -80,7 +81,7 @@
                                             </div>
                                             <div class="card-body">
                                               <h5 class="card-title">Entre os dias 23 a 27 de maio | em várias localidades</h5>
-                                              <p class="card-text">A primeira acontecerá entre os dias 23 a 27 de maio, de segunda a sexta-feira em diversas bibliotecas e instituições de São Carlos, além de atividades online e tem como público àquelas pessoas que frequentam os serviços de informação e conhecimento.</p>
+                                              <p class="card-text">O primeiro ato acontecerá entre os dias 23 a 27 de maio, de segunda a sexta-feira em diversas bibliotecas e instituições de São Carlos, além de atividades online e tem como público àquelas pessoas que frequentam os serviços de informação e conhecimento.</p>
                                               <a target="_blank" href="https://docs.google.com/spreadsheets/d/1Zdt5J5Iq_fievda71d9nSQGbJSIUo61ae38HFGx8tRo/edit?usp=sharing" class="btn btn-primary">Consulte a programação aqui</a>
                                             </div>
                                         </div>
@@ -96,7 +97,7 @@
                                             </div>
                                             <div class="card-body">
                                               <h5 class="card-title">No dia 28 de maio (sábado) | No ONOVOLAB</h5>
-                                              <p class="card-text">A segunda parte, voltada para os profissionais da área de Biblioteconomia, Arquivologia e Museologia, acontecerá no dia 28 de maio (sábado) e será presencial no maior centro de inovação independente do Brasil: o <a target="_blank" href="https://onovolab.com">ONOVOLAB</a></p>
+                                              <p class="card-text">O segundo ato, voltada para os profissionais da área de Biblioteconomia, Arquivologia e Museologia (Ciência da Informação) acontecerá no dia 28 de maio (sábado) e será presencial no maior centro de inovação independente do Brasil: o <a target="_blank" href="https://onovolab.com">ONOVOLAB</a></p>
                                               <a target="_blank" href="https://docs.google.com/spreadsheets/d/1d9b2iA_moboH7oSERf-658lSFCyyV73fVRWGMeYwsb4/edit#gid=0" class="btn btn-primary">Consulte a programação aqui</a>
                                               
                                             </div>
@@ -116,7 +117,8 @@
         <!-- Social section -->
         <section class="bg-gradient-primary-to-secondary" id="download">
             <div class="container px-5">
-                <h2 class="text-center text-white font-alt mb-4">Ingressos para o dia 28 de maio no Onovolab</h2>
+                <h2 class="text-center text-white font-alt mb-4">Se você ama bibliotecas, arquivos ou museus ou quaisquer outras instituições de informação e conhecimento e ama estar entre amigos, faça sua inscrição para o evento do dia 28 de maio no Onovolab aqui!</h2>
+                <p>A participação no Festival SIBiSC é totalmente gratuita, voluntária e expontânea. Por isso não teremos certificados e nem comprovantes de participação. Venha apenas se você realmente ama a área de biblioteconomia, arquivologia ou museologia, as Ciências da Informação. Trata-se de um encontro entre amigos. Se você se encaixa nisso, seja muito bem-vindo e bem-vinda!</p>
                 <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center text-white">
                     <div id="sympla-widget-1569924" height="auto"></div> <script src="https://www.sympla.com.br/js/sympla.widget-pt.js/1569924"></script>
                 </div>
@@ -128,8 +130,8 @@
         <section id="map" class="map">
             <div class="map-content">
                 <div class="container px-5">
-                    <h2 class="text-white display-1 lh-1 mb-4">
-                        Mapa com os locais das atividades
+                    <h2 class="text-center text-white font-alt mb-4">
+                        O mapa a seguir mostra os diversos locais onde acontecerão atividades do Festival SIBiSC ao longo da semana.
                     </h2>
                     <iframe src="https://www.google.com/maps/d/embed?mid=1jYy7mqe6TRVEMQh85lqEJc1knu6yIDO4&ehbc=2E312F" width="100%" height="580"></iframe>
                 </div>
